--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "@fontsource/roboto": "^5.1.0",
     "@mui/material": "^6.1.5",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-vega": "^7.6.0",
+    "vega": "^5.30.0",
+    "vega-lite": "^5.21.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
